Fixing and Jump to 5 seconds

--- a/main.css
+++ b/main.css
@@ -77,6 +77,7 @@ input.input_bar
 	bottom:10%;
 	width: 30%;
 	height:5%;
+	font-size: 24px;
 
 	display: block;
     border: none;
